<resources>
    <string name="app_name">QuizApp</string>
    <string name="main_navigation">Main</string>
    <string name="history_navigation">history</string>
    <string name="settings_settings">settings</string>
    <string name="start_button_text">START</string>
    <string name="quiz_category">Category</string>
    <string name="quiz_difficulty">Difficulty</string>
    <string name="quiz_questions_amount">Questions amount:</string>
    <string name="quiz_amount_10">10</string>
    <string name="quiz">Quiz</string>
    <string name="history">History</string>
    <string name="category">Category: Mixed</string>
    <string name="correct_answers">Correct answers: 8/10</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="history_time">12 may 2019 20:32</string>
    <string name="settings_fragment">Settings</string>
    <string name="share_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="clear_history">Clear history</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="version">v 1.0.0</string>
    <string name="skip">Skip</string>
    <string name="result_title">Result</string>
    <string name="result_category_mixed">Category: Mixed</string>
    <string name="finish">Finish</string>
    <string name="percent">0%</string>
    <string name="_0_0">0/0</string>
    <string name="all">All</string>
    <string name="result">Result</string>
    <string name="correct">Correct answers</string>
    <string name="difficulty">Difficulty</string>
</resources>
