<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.MainActivity$MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/quiz_logo"
            android:layout_width="65dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/lc_quiz_logo" />

        <TextView
            android:id="@+id/quiz_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quiz_logo"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/quiz_questions_amount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quiz_logo"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/quiz_amount"
            android:text="@string/quiz_amount_10"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seek_bar_amount"
            android:layout_below="@+id/quiz_amount"
            android:layout_centerVertical="true"
            android:layout_width="340dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seek_bar_amount"
            android:layout_centerVertical="true"
            android:layout_marginTop="13dp"
            android:text="@string/quiz_category" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/text_view_category"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/text_view_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_category"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/quiz_difficulty" />

        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/text_view_difficulty"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/quiz_start_button"
            style="@style/StartButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="77dp"
            android:text="@string/start_button_text" />
    </RelativeLayout>
</FrameLayout>