<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingTop="12dp"
    android:paddingEnd="12dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/rectangle_container"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:elevation="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/category_text_view_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/category"
        android:textColor="@color/colorOfTextViewQuiz"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
        app:layout_constraintTop_toTopOf="@+id/rectangle_container" />

    <TextView
        android:id="@+id/correct_answers_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13.2dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/correct_answers"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
        app:layout_constraintTop_toBottomOf="@+id/category_text_view_history" />

    <TextView
        android:id="@+id/difficulty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/difficulty_easy"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_container"
        app:layout_constraintTop_toBottomOf="@+id/correct_answers_text_view" />

    <TextView
        android:id="@+id/history_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/history_time"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_container"
        app:layout_constraintTop_toTopOf="@+id/rectangle_container" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ic_more_horizonatl"
        app:layout_constraintBottom_toBottomOf="@+id/category_text_view_history"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_container"
        app:layout_constraintTop_toTopOf="@+id/category_text_view_history"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>