<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:id="@+id/settings"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOfTextViewQuiz"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <ImageView
        android:id="@+id/image_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin_1"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/share_this_text_view"
        style="@style/AppTheme.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        android:textColor="@color/colorOfTextViewQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOfTextViewQuiz"
        app:layout_constraintTop_toBottomOf="@+id/share_this_text_view" />

    <ImageView
        android:id="@+id/image_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin_1"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/rate_us_text_view"
        style="@style/AppTheme.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:textColor="@color/colorOfTextViewQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOfTextViewQuiz"
        app:layout_constraintTop_toBottomOf="@+id/rate_us_text_view" />

    <ImageView
        android:id="@+id/image_view_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin_1"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/leave_feedback_us_text_view"
        style="@style/AppTheme.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_feedback"
        android:textColor="@color/colorOfTextViewQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOfTextViewQuiz"
        app:layout_constraintTop_toBottomOf="@+id/leave_feedback_us_text_view" />

    <ImageView
        android:id="@+id/image_view_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin_1"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/clear_history_text_view"
        style="@style/AppTheme.SettingsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:textColor="@color/colorOfBottomNavIconSelected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOfTextViewQuiz"
        app:layout_constraintTop_toBottomOf="@+id/clear_history_text_view" />

    <TextView
        android:id="@+id/version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_big_margin_4"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />
</androidx.constraintlayout.widget.ConstraintLayout>