<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:id="@+id/quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/extra_big_margin"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/quiz"
        android:textColor="@color/colorOfTextViewQuiz"
        android:textSize="@dimen/big_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/quiz_logo"
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_margin"
        android:src="@drawable/lc_quiz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz" />

    <TextView
        android:id="@+id/quiz_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_big_margin_1"
        android:layout_marginTop="@dimen/extra_big_margin_2"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/quiz_questions_amount"
        android:textColor="@color/colorOfTextViewDifficulty"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="@+id/quiz"
        app:layout_constraintTop_toBottomOf="@+id/quiz_logo" />

    <TextView
        android:id="@+id/text_view_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/quiz_amount_10"
        android:textColor="@color/colorAmount"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_amount"
        app:layout_constraintStart_toEndOf="@+id/quiz_amount"
        app:layout_constraintTop_toTopOf="@+id/quiz_amount" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seek_bar_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/seek_bar_extra_big_margin"
        android:layout_marginTop="@dimen/seek_bar_small_margin"
        android:layout_marginEnd="@dimen/seek_bar_extra_big_margin"
        android:max="50"
        android:progress="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_amount" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/quiz_category"
        android:textColor="@color/colorOfTextViewDifficulty"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="@+id/quiz_amount"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_amount" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spinner_big_margin"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/spinner_big_margin"
        android:elevation="@dimen/elevation"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_amount"
        app:layout_constraintTop_toBottomOf="@+id/text_view_category"
        app:popupTextAlignment="start" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/quiz_difficulty"
        android:textColor="@color/colorOfTextViewDifficulty"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="@+id/quiz_amount"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spinner_big_margin"
        android:layout_marginTop="@dimen/spinner_small_margin"
        android:layout_marginEnd="@dimen/spinner_big_margin"
        android:elevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_amount"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_amount"
        app:layout_constraintTop_toBottomOf="@+id/text_view_difficulty"
        app:popupTextAlignment="start" />

    <Button
        android:id="@+id/quiz_start_button"
        style="@style/StartButtonStyle"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:fontFamily="@font/sf_text_semi_bold"
        android:text="@string/start_button_text"
        android:textSize="@dimen/start_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner_difficulty"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/spinner_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/spinner_difficulty" />
</androidx.constraintlayout.widget.ConstraintLayout>